; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_set_format_mtree.c_mtree_entry_cmp_node.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_set_format_mtree.c_mtree_entry_cmp_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_rb_node = type { i32 }
%struct.mtree_entry = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive_rb_node*, %struct.archive_rb_node*)* @mtree_entry_cmp_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtree_entry_cmp_node(%struct.archive_rb_node* %0, %struct.archive_rb_node* %1) #0 {
  %3 = alloca %struct.archive_rb_node*, align 8
  %4 = alloca %struct.archive_rb_node*, align 8
  %5 = alloca %struct.mtree_entry*, align 8
  %6 = alloca %struct.mtree_entry*, align 8
  store %struct.archive_rb_node* %0, %struct.archive_rb_node** %3, align 8
  store %struct.archive_rb_node* %1, %struct.archive_rb_node** %4, align 8
  %7 = load %struct.archive_rb_node*, %struct.archive_rb_node** %3, align 8
  %8 = bitcast %struct.archive_rb_node* %7 to %struct.mtree_entry*
  store %struct.mtree_entry* %8, %struct.mtree_entry** %5, align 8
  %9 = load %struct.archive_rb_node*, %struct.archive_rb_node** %4, align 8
  %10 = bitcast %struct.archive_rb_node* %9 to %struct.mtree_entry*
  store %struct.mtree_entry* %10, %struct.mtree_entry** %6, align 8
  %11 = load %struct.mtree_entry*, %struct.mtree_entry** %6, align 8
  %12 = getelementptr inbounds %struct.mtree_entry, %struct.mtree_entry* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.mtree_entry*, %struct.mtree_entry** %5, align 8
  %16 = getelementptr inbounds %struct.mtree_entry, %struct.mtree_entry* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @strcmp(i32 %14, i32 %18)
  ret i32 %19
}

declare dso_local i32 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
